[tool.poetry]
name = "pkmets"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
psycopg2 = "^2.9.7"
lifelines = "^0.27.8"
japanize-matplotlib = "^1.1.3"
fastparquet = "^2023.8.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
jupyterlab = "^4.0.6"
jupyterlab-code-formatter = "^2.2.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
